...
		<p class="title">削除</p>
		<p class="explain">書き込みを削除します</p>

		<p class="title">そうだね</p>
		<p class="explain">そうだねを送信します</p>

		<p class="title">クイック</p>
		<p class="explain">引用記号をつけて送信画面に転送します</p>

		<p class="title">返信</p>
		<p class="explain">引用する行を選択して送信画面に転送します</p>

		<p class="title">コピー</p>
		<p class="explain">コピーする行を選択して送信画面に転送します</p>

		<hr />
...
		<p class="explain"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMAAAADACAYAAABS3GwHAAAZkUlEQVR42u2debBlV1XGf2uf4fXc/br7dTqdjgmhIBGCDBEwgAzGARVQHJmJERSQIdFS8A8ttawSxUKrtLBUIopSqOUASUCjIWEmTUaCAXqkhzfc++743p2Hc7Z/nH27X3e/4b737r3n3Hv3V3Wqp+Sdc/Za397fWmetvUVrjYXFuELZIbCwBLCwsASwsLAEsLCwBLCwsASwsLAEsLCwBLCwsASwsLAEsLCwBLCwsASwsLAEsLCwBLCwsASwsLAEsLCwBLCwsASwsLAEsLCwBLCwsASwsLAEsLCwBLCwsAS

		<p class="explain"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMAAAADACAMAAABlApw1AAACH1BMVEWZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZm

	</div>

	<label for="gallery" class="index">画像一覧</label>
	<input type="checkbox" id="gallery" class="on-off" />
	<div class="explain">

		<p class="midashi">操作</p>

		<p class="title">タッチ</p>
...

		<hr />

		<p class="title">元レスに移動する</p>
		<p class="explain">添付されたレスに戻ります</p>

		<p class="title">画像を保存する</p>
		<p class="explain">指定のフォルダに画像を保存します</p>

""",
    """
		<p class="title">URLリンクをコピー</p>
		<p class="explain">画像のアドレスをコピーします</p>
...
